# docker-registry

./: Cargo.toml  LICENSE  LICENSE.txt  README.md
src/: auth.rs  conf.rs  http_client.rs  main.rs  registry_client.rs
