[package]
name = "docker-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
futures = "0.3.26"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7.2.0"
rust-ini = "0.18.0"
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
